# Fintech-Finetuned-LLM

./: .gitignore  main.py  pyproject.toml
backend/: app.py
backend/model/data/: finance_dataset.json
backend/model/fine_tuned/checkpoint-1/: rng_state.pth  trainer_state.json
backend/model/fine_tuned/checkpoint-2/: adapter_config.json  adapter_model.safetensors  rng_state.pth
backend/model/fine_tuned_model/: adapter_model.safetensors
frontend/: .env
frontend/src/: App.css  App.jsx
model/: train.py
model/data/: tech_dataset.json
model/fine_tuned/checkpoint-1/: adapter_model.safetensors
model/fine_tuned/checkpoint-2/: trainer_state.json
model/fine_tuned/checkpoint-3/: rng_state.pth  trainer_state.json
model/fine_tuned_model/: README.md  tokenizer.json  tokenizer_config.json
