[project]
name = "fintech-llm-finetuned"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "fastapi>=0.136.3",
    "peft>=0.19.1",
    "python-multipart>=0.0.29",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "trl>=1.4.0",
    "uvicorn>=0.48.0",
]
